--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI-Trading-Agent</title>
+    <title>Bit IQ AI</title>
     <meta name="description" content="Resolve53 Generated Project" />
     <meta name="author" content="Resolve53" />
 
